--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -44,12 +44,12 @@
                             id="field_imageURL" class="jh-create-entity create-media"
                                 (click)="choseMediaforFeature()" type="button">
                             <fa-icon [icon]="'plus'"></fa-icon>
-                            <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
-                            Upload Media
-                        </span>
+                            <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckClaimant.uploadImage">
+                                Upload Image
+                            </span>
                         </button>
-                        <div *ngIf="claimant.imageURL">
-                            <span [(ngModel)]="claimant.imageURL" name="featuredMedia" ngDefaultControl></span>
+                        <div *ngIf="claimant.mediaDTO" class="margin-t-20">
+                            <img src={{claimant.mediaDTO.url}} alt="" width="100" height="100">
                         </div>
                     </div>
                 </div>
