Fixed Claimant image in view page

--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-detail.component.html
@@ -29,9 +29,9 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Claimant</span></td>
+                            <td><span jhiTranslate="gatewayApp.factcheckClaimant.image">Claimant</span></td>
                             <td>
-                                <span><img src={{claimant.imageURL}} alt="" width="100" height="100"></span>
+                                <span><img *ngIf="claimant.mediaDTO" src={{claimant.mediaDTO.url}} alt="" width="100" height="100"></span>
                             </td>
                         </tr>
                         <tr>
