Change name of mediaDTO to media across all the APIs. Change from url to sourceURL for all the image references across entities. Fixes #267, Fixes #268

--- a/src/main/webapp/app/entities/core/dega-user/dega-user-detail.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-detail.component.html
@@ -43,7 +43,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreDegaUser.profilePicture">Profile Picture</span></dt>
                 <dd>
-                    <span> <img src={{degaUser.profilePicture}} alt="" width="100" height="100"> </span>
+                    <span> <img src={{degaUser.media.sourceURL}} alt="" width="100" height="100"> </span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreDegaUser.description">Description</span></dt>
                 <dd>
