--- a/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
+++ b/src/main/webapp/app/entities/core/dega-user/dega-user-update.component.html
@@ -73,8 +73,8 @@
                         Select Profile image
                     </button>
 
-                    <div *ngIf="degaUser.mediaDTO">
-                        <img src={{degaUser.mediaDTO.url}} alt="" width="100" height="100">
+                    <div *ngIf="degaUser.media">
+                        <img src={{degaUser.media.sourceURL}} alt="" width="100" height="100">
                     </div>
                 </div>
                 <div class="form-group">
