--- a/src/main/webapp/app/entities/core/organization/organization-detail.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization-detail.component.html
@@ -27,19 +27,19 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.logoURL">Logo</span></dt>
                 <dd>
-                    <span><img src={{organization.logoURL}} alt="" width="100" height="100"></span>
+                    <span><img src={{organization.mediaLogo.sourceURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.logoURLMobile">Mobile Logo</span></dt>
                 <dd>
-                    <span><img src={{organization.logoURLMobile}} alt="" width="100" height="100"></span>
+                    <span><img src={{organization.mediaMobileLogo.sourceURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.favIconURL">Fav Icon</span></dt>
                 <dd>
-                    <span><img src={{organization.favIconURL}} alt="" width="100" height="100"></span>
+                    <span><img src={{organization.mediaFavicon.sourceURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.mobileIconURL">Mobile Icon</span></dt>
                 <dd>
-                    <span><img src={{organization.mobileIconURL}} alt="" width="100" height="100"></span>
+                    <span><img src={{organization.mediaMobileIcon.sourceURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreOrganization.baiduVerificationCode">Baidu Verification Code</span></dt>
                 <dd>
