--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-detail.component.html
@@ -31,7 +31,7 @@
                         <tr>
                             <td><span jhiTranslate="gatewayApp.factcheckClaimant.image">Claimant</span></td>
                             <td>
-                                <span><img *ngIf="claimant.mediaDTO" src={{claimant.mediaDTO.url}} alt="" width="100" height="100"></span>
+                                <span><img *ngIf="claimant.media" src={{claimant.media.sourceURL}} alt="" width="100" height="100"></span>
                             </td>
                         </tr>
                         <tr>
