--- a/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
@@ -25,7 +25,7 @@
                         <tr>
                             <td><span jhiTranslate="gatewayApp.factcheckRating.ratingIcon">Rating Icon</span></td>
                             <td>
-                                <span><img *ngIf="rating.mediaDTO" src={{rating.mediaDTO.url}} height="100"></span>
+                                <span><img *ngIf="rating.media" src={{rating.media.sourceURL}} height="100"></span>
                             </td>
                         </tr>
                         <tr>
