--- a/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
+++ b/src/main/webapp/app/entities/core/media/featured-media/featured-media-upload-dialog.component.html
@@ -22,8 +22,8 @@
 <div class="modal-body">
         <div class="pad-left" *ngIf="media" class="col-sm-12 col-md-12 col-lg-12">
             <div class="row">
-                <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3 col-md-1 col-lg-1" (click)="onSearch(media.url)">
-                    <img src={{media.url}} alt="Image" width="100" height="100" class="img-bottom">
+                <div *ngFor="let media of media;trackBy: trackId" class="col-sm-3 col-md-1 col-lg-1" (click)="onSearch(media.sourceURL)">
+                    <img src={{media.sourceURL}} alt="Image" width="100" height="100" class="img-bottom">
                 </div>
             </div>
         </div>
