--- a/src/main/webapp/app/entities/core/media/media-detail.component.html
+++ b/src/main/webapp/app/entities/core/media/media-detail.component.html
@@ -15,7 +15,7 @@
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreMedia.url">Url</span></dt>
                 <dd>
-                    <span><img src={{media.url}} alt="" width="100" height="100"></span>
+                    <span><img src={{media.sourceURL}} alt="" width="100" height="100"></span>
                 </dd>
                 <dt><span jhiTranslate="gatewayApp.coreMedia.fileSize">File Size</span></dt>
                 <dd>
