--- a/src/main/webapp/app/entities/core/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/core/post/post-detail.component.html
@@ -79,7 +79,7 @@
                         <tr>
                             <td><span jhiTranslate="gatewayApp.corePost.featuredMedia">Featured Media</span></td>
                             <td>
-                                <span *ngIf="post.mediaDTO" ><img src={{post.mediaDTO.url}} alt="" width="100" height="100"></span>
+                                <span *ngIf="post.media" ><img src={{post.media.sourceURL}} alt="" width="100" height="100"></span>
                             </td>
                         </tr>
                         <tr>
