--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -48,8 +48,8 @@
                                 Upload Image
                             </span>
                         </button>
-                        <div *ngIf="claimant.mediaDTO" class="margin-t-20">
-                            <img src={{claimant.mediaDTO.url}} alt="" width="100" height="100">
+                        <div *ngIf="claimant.media" class="margin-t-20">
+                            <img src={{claimant.media.sourceURL}} alt="" width="100" height="100">
                         </div>
                     </div>
                 </div>
