--- a/src/main/webapp/app/entities/factcheck/rating/rating.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating.component.html
@@ -38,7 +38,7 @@
                         <fa-icon></fa-icon>
                     </th>
                     <td class="p-2 pl-4" mat-cell *matCellDef="let element">
-                        <img *ngIf="element.mediaDTO" class="mh-50" src="{{element.mediaDTO.url}}"/>
+                        <img *ngIf="element.media" class="mh-50" src="{{element.media.sourceURL}}"/>
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="name">
