--- a/src/main/webapp/app/entities/core/media/media.component.html
+++ b/src/main/webapp/app/entities/core/media/media.component.html
@@ -42,7 +42,7 @@
             </thead>
             <tbody>
             <tr *ngFor="let media of media ;trackBy: trackId">
-                <td><img src={{media.sourceURL}} alt="Image" width="100" height="100"></td>
+                <td><img src="{{media.sourceURL}}?resize:fill:100:100/gravity:sm" alt="Image" width="100" height="100"></td>
                 <td>{{media.title}}</td>
                 <td>{{media.type}}</td>
                 <td>{{media.fileSize}}</td>
