--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -184,20 +184,19 @@
             </li>
 		</ul>
 	</nav>
-	<div class="side-bar-minimizer-wrap">
-        <ul>
-            <li>
-            <a routerLink="/privacy-policy">
-					<span>
-						<fa-icon [icon]="'home'"></fa-icon>
-                        <span jhiTranslate="global.menu.privacy.policy">Privacy Policy</span>
-					</span>
-            </a>
-            </li>
-            <li (click)="stickMenu()">
-                <span>{{version}}</span>
-                <button class="side-bar-minimizer" [ngClass]="{'sticky': toggleSticky}"></button>
-            </li>
-        </ul>
+    <div class="side-bar-minimizer-wrap">
+        <a routerLink="/privacy-policy">
+            <span>
+                <span jhiTranslate="global.menu.privacy.policy">Privacy Policy</span><br><br><br><br>
+            </span>
+        </a>
+        <div (click)="stickMenu()">
+            <span>{{version}}</span>
+            <button class="side-bar-minimizer" [ngClass]="{'sticky': toggleSticky}"></button>
+        </div>
     </div>
+	<!--<div class="side-bar-minimizer-wrap" ">-->
+        <!--<span>{{version}}</span>-->
+        <!--<button class="side-bar-minimizer" [ngClass]="{'sticky': toggleSticky}"></button>-->
+    <!--</div>-->
 </div>
