changed the content in privacy policy document

--- a/src/main/webapp/app/privacy-policy/privacy-policy.component.html
+++ b/src/main/webapp/app/privacy-policy/privacy-policy.component.html
@@ -5,7 +5,7 @@
             Welcome to our Privacy Policy. Your privacy is critically important to us.
         </p>
         <p>
-            It is Factly Media & Research’s policy to respect your privacy regarding any information we may collect while operating our website. This Privacy Policy applies to https://factly.in (hereinafter, “us”, “we”, or “https://factly.in”). We respect your privacy and are committed to protecting personally identifiable information you may provide us through the Website. We have adopted this privacy policy (“Privacy Policy”) to explain what information may be collected on our Website, how we use this information, and under what circumstances we may disclose the information to third parties. This Privacy Policy applies only to information we collect through the Website and does not apply to our collection of information from other sources.
+            It is Factly Media & Research’s policy to respect your privacy regarding any information we may collect while operating our website. This Privacy Policy applies to https://degacms.com (hereinafter, “us”, “we”, or “https://degacms.com”). We respect your privacy and are committed to protecting personally identifiable information you may provide us through the Website. We have adopted this privacy policy (“Privacy Policy”) to explain what information may be collected on our Website, how we use this information, and under what circumstances we may disclose the information to third parties. This Privacy Policy applies only to information we collect through the Website and does not apply to our collection of information from other sources.
         </p>
         <p>
             This Privacy Policy, together with the Terms and conditions posted on our Website, set forth the general rules and policies governing your use of our Website. Depending on your activities when visiting our Website, you may be required to agree to additional terms and conditions.
@@ -15,11 +15,11 @@
             Like most website operators, Factly Media & Research collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. Factly Media & Research’s purpose in collecting non-personally identifying information is to better understand how Factly Media & Research’s visitors use its website. From time to time, Factly Media & Research may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.
         </p>
         <p>
-            Factly Media & Research also collects potentially personally-identifying information like Internet Protocol (IP) addresses for logged in users and for users leaving comments on https://factly.in blog posts. Factly Media & Research only discloses logged in user and commenter IP addresses under the same circumstances that it uses and discloses personally-identifying information as described below.
+            Factly Media & Research also collects potentially personally-identifying information like Internet Protocol (IP) addresses for logged in users and for users leaving comments on https://degacms.com blog posts. Factly Media & Research only discloses logged in user and commenter IP addresses under the same circumstances that it uses and discloses personally-identifying information as described below.
         </p>
         <h3>Gathering of Personally-Identifying Information</h3>
         <p>
-            Certain visitors to Factly Media & Research’s websites choose to interact with Factly Media & Research in ways that require Factly Media & Research to gather personally-identifying information. The amount and type of information that Factly Media & Research gathers depends on the nature of the interaction. For example, we ask visitors who sign up for a blog at https://factly.in to provide a username and email address.
+            Certain visitors to Factly Media & Research’s websites choose to interact with Factly Media & Research in ways that require Factly Media & Research to gather personally-identifying information. The amount and type of information that Factly Media & Research gathers depends on the nature of the interaction. For example, we ask visitors who sign up for a blog at https://degacms.com to provide a username and email address.
         </p>
         <h3>Security</h3>
         <p>
@@ -38,7 +38,7 @@
         <p>
             To enrich and perfect your online experience, Factly Media & Research uses “Cookies”, similar technologies and services provided by others to display personalized content, appropriate advertising and store your preferences on your computer.
 
-            A cookie is a string of information that a website stores on a visitor’s computer, and that the visitor’s browser provides to the website each time the visitor returns. Factly Media & Research uses cookies to help Factly Media & Research identify and track visitors, their usage of https://factly.in, and their website access preferences. Factly Media & Research visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using Factly Media & Research’s websites, with the drawback that certain features of Factly Media & Research’s websites may not function properly without the aid of cookies.
+            A cookie is a string of information that a website stores on a visitor’s computer, and that the visitor’s browser provides to the website each time the visitor returns. Factly Media & Research uses cookies to help Factly Media & Research identify and track visitors, their usage of https://degacms.com, and their website access preferences. Factly Media & Research visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using Factly Media & Research’s websites, with the drawback that certain features of Factly Media & Research’s websites may not function properly without the aid of cookies.
 
             By continuing to navigate our website without changing your cookie settings, you hereby acknowledge and agree to Factly Media & Research’s use of cookies.
         </p>
